--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "scripts": {
-  "dev": "next dev -p 3001",
+  "dev": "next dev",
   "build": "next build",
-  "start": "next start -p 3001"
+  "start": "next start",
+  "export": "next export"
 },
   "dependencies": {
     "@mdi/js": "^7.4.47",
